--- a/style.css
+++ b/style.css
@@ -164,12 +164,13 @@ body {
 /* //////////////////////////////////////////////////////////////////// */
 /* author side bar control*/
 .circular_image {
-  width: 300px;
-  height: 160px;
+  width: 90%;
+  height: 70%;
   border-radius: 50%;
   overflow: hidden;
   background-color: white;
   margin-top: 20px;
+  margin-left: 10px;
   
 }
 .circular_image img{
@@ -202,4 +203,7 @@ body {
 
 .inline_icon ul li {
     float:left;
+    width: 10%;
+    margin:1px 5px;
+    padding:0px 2px;
 }
